--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,18 +1,24 @@
 plugins {
-    id 'java'
+    id "java"
 }
 
-group 'ru.kononov'
-version '1.0.0'
+group "ru.kononov"
+version "1.0.0"
 
 sourceCompatibility = 11
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
     implementation project(":storage-api")
     implementation project(":in-memory-storage")
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    implementation platform("org.apache.logging.log4j:log4j-bom:2.12.0")
+
+    implementation(
+            "org.apache.logging.log4j:log4j-api",
+            "org.apache.logging.log4j:log4j-core"
+    )
+
+    testImplementation(
+            "org.junit.jupiter:junit-jupiter:5.5.1"
+    )
 }
