--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,8 @@
-plugins {
-    id 'java'
-}
+group "ru.kononov"
+version "1.0.0"
 
-group 'ru.kononov'
-version '1.0.0'
-
-sourceCompatibility = 11
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+subprojects {
+    repositories {
+        mavenCentral()
+    }
 }
