--- a/in-memory-storage/build.gradle
+++ b/in-memory-storage/build.gradle
@@ -1,17 +1,12 @@
 plugins {
-    id 'java'
+    id "java"
 }
 
-group 'ru.kononov'
-version '1.0.0'
+group "ru.kononov"
+version "1.0.0"
 
 sourceCompatibility = 11
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     implementation project(":storage-api")
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
