изменил формат ответов. добавил тест одного хэндлера.

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     testImplementation(
             "org.junit.jupiter:junit-jupiter:$jupiterVersion",
-            "org.assertj:assertj-core:$assertjVersion"
+            "org.assertj:assertj-core:$assertjVersion",
+            "org.mockito:mockito-core:3.0.0"
     )
 }
