--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,6 +1,4 @@
-plugins {
-    id "java"
-}
+apply plugin: "application"
 
 group "ru.kononov"
 version "1.0.0"
@@ -8,19 +6,17 @@ version "1.0.0"
 sourceCompatibility = 11
 
 dependencies {
-    implementation project(":storage-api")
-    implementation project(":in-memory-storage")
+    compile project(":in-memory-storage")
+}
 
-    implementation platform("org.apache.logging.log4j:log4j-bom:2.12.0")
-
-    implementation(
-            "org.apache.logging.log4j:log4j-api",
-            "org.apache.logging.log4j:log4j-core"
-    )
-
-    testImplementation(
-            "org.junit.jupiter:junit-jupiter:$jupiterVersion",
-            "org.assertj:assertj-core:$assertjVersion",
-            "org.mockito:mockito-core:3.0.0"
-    )
+jar {
+    mainClassName = "ru.kononov.numberstatisticservice.api.Application"
+    manifest {
+        attributes("Main-Class": "$mainClassName")
+    }
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
 }
