--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,30 @@ ext {
 }
 
 subprojects {
+    apply plugin: "java"
+
     repositories {
         mavenCentral()
+    }
+
+    dependencies {
+        compile platform("org.apache.logging.log4j:log4j-bom:2.12.0")
+        compile(
+                "org.apache.logging.log4j:log4j-api",
+                "org.apache.logging.log4j:log4j-core"
+        )
+        testCompile(
+                "org.junit.jupiter:junit-jupiter:5.5.1",
+                "org.assertj:assertj-core:3.13.2",
+                "org.mockito:mockito-core:3.0.0"
+        )
+    }
+
+    test {
+        useJUnitPlatform()
+        dependsOn "cleanTest"
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
     }
 }
