--- a/api/build.gradle
+++ b/api/build.gradle
@@ -7,6 +7,7 @@ sourceCompatibility = 11
 
 dependencies {
     compile project(":in-memory-storage")
+    compile "commons-io:commons-io:2.6"
 }
 
 jar {
