--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,16 @@ subprojects {
         compile platform("org.apache.logging.log4j:log4j-bom:2.12.0")
         compile(
                 "org.apache.logging.log4j:log4j-api",
-                "org.apache.logging.log4j:log4j-core"
+                "org.apache.logging.log4j:log4j-core",
+                "com.google.dagger:dagger:2.25.2"
         )
         testCompile(
                 "org.junit.jupiter:junit-jupiter:5.5.1",
                 "org.assertj:assertj-core:3.13.2",
                 "org.mockito:mockito-core:3.0.0"
+        )
+        annotationProcessor(
+                "com.google.dagger:dagger-compiler:2.25.2"
         )
     }
 
